# moltis

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  fly.toml  justfile  render.yaml
.do/: deploy.template.yaml
.github/workflows/: ci.yml  deb-packages.yml  e2e.yml  provider-integration.yml  release.yml
crates/agents/: Cargo.toml
crates/agents/src/: lazy_tools.rs  model.rs  prompt.rs  runner.rs  (+4 more)
crates/browser/: Cargo.toml
crates/cli/: Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: hooks.rs  http_client.rs
crates/gateway/: Cargo.toml
crates/httpd/: Cargo.toml
crates/memory/: Cargo.toml
crates/node-host/: Cargo.toml
crates/plugins/: Cargo.toml
crates/skills/: Cargo.toml
crates/tools/: Cargo.toml
crates/webhooks/: Cargo.toml
deploy/: moltis.service
docs/src/: SUMMARY.md  channels.md  cloud-deploy.md  compaction.md  comparison.md  configuration-reference.md  configuration.md  deploy-vps.md  hooks.md  installation.md  local-validation.md  memory-comparison.md  memory-surfaces.md  memory.md  nodes.md  vault.md
prompts/: session-2026-03-28-skills-bundles-and-ssh-ux.md  session-2026-04-12-container-native-file-ops.md  session-2026-04-12-oci-runtime-tests-and-list-cap.md
scripts/: check-install-docs.sh  install-linux-build-deps.sh  local-validate.sh
website/: index.de.html  index.en.html  index.es.html  index.fr.html  index.it.html  index.ja.html  index.ko.html  index.pt.html  index.ru.html  index.zh.html  releases.json
website/changelog/: index.html
website/scripts/: build-changelog.mjs  validate-i18n.mjs
(+289 files in other folders)
