[package]
edition.workspace = true
name              = "moltis-common"
version.workspace = true

[dependencies]
anyhow      = { workspace = true }
async-trait = "0.1"
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }
